# ADSnitch

./: .gitignore  Cargo.toml  db.txt
src/: auth_event.rs  config.rs  database.rs  krb.rs  main.rs  ntlm.rs
