[package]
name = "ADSnitch"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
evtx = "0.8.3"
lazy-regex = "3.3.0"
lettre = { version = "0.11.9", features = ["tokio1", "tokio1-native-tls"] }
regex = "1.11.0"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
